--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-    max-width: 800px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .spacer-image {
