--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -1,8 +1,29 @@
 
-.site-title {
-    width: calc(100% - 10px);
+.nav-title-bar {
+    width: calc(100% - 30px);
     text-align: center;
-    background-color: #1B1B1B;
+    background-color: var(--var-secondary-color);
     border-radius: 10px;
-    padding: 20px 0px;
+    margin-top: 5px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    position: sticky;
+    top: 5px;
+    justify-content: space-between;
 }
+
+.nav-title-bar span {
+    display: flex;
+    align-items: center;
+}
+
+
+
+.nav-title-bar span h2 {
+    font-size: 1.4rem;
+    margin: 0 5px 0px 0px;
+    letter-spacing: 1px;
+}
+
