--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(
   284deg,
-  #51C9FC 0%,
-  #b5e4f6 100%
+  #021218 0%,
+  #51C9FC 100%
 );
 min-height: 100vh;
 background-size: cover;
