--- a/src/Components/Title/NavigationButton/NavigationButton.css
+++ b/src/Components/Title/NavigationButton/NavigationButton.css
@@ -29,6 +29,8 @@
     left: 5px;
     border-radius: 10px;
     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.472);
+    display: flex;
+    flex-direction: column;
 }
 
 .navigation-menu-wrapper {
@@ -38,14 +40,19 @@
     width: 100%;
     height: 100%;
     z-index: 20;
+    background-color: rgba(0, 0, 0, 0.48);
 }
 
-.navigation-menu p {
+.navigation-menu a {
     cursor: pointer;
     width: 100%;
+    height: 20px;
     text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 10px 0px;
 }
 
-.navigation-menu p:hover {
+.navigation-menu a:hover {
     text-decoration: underline;
 }
