--- a/src/Components/GallerySplash/GallerySplash.css
+++ b/src/Components/GallerySplash/GallerySplash.css
@@ -44,7 +44,7 @@
 
 
 @media (max-width: 500px) {
-    .gallery-splash-container svg {
+    #bubble-logo {
         width: 200px;
         height: 200px;
     }
